--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: '3.7'
 services:
   proxy:
     container_name: m-proxy
@@ -8,7 +8,9 @@ services:
     volumes:
       - ./proxy/nginx.conf:/etc/nginx/nginx.conf
     networks:
-      - laravel
+      laravel:
+        ipv4_address: 172.40.0.2
+
 
   my-laravel:
     container_name: m-laravel
@@ -17,31 +19,27 @@ services:
     volumes:
       - ./laravel-project:/root/laravel-project
     networks:
-      - laravel
-    command: ["/bin/bash", "entrypoint"]
+      laravel:
+        ipv4_address: 172.40.0.3
+#    command: ["/bin/bash", "entrypoint"]
 
   my-mariadb:
     container_name: m-mariadb
     build: ./mariadb
     image: custom-mariadb
-
     environment:
       - TZ=Asia/Seoul
-
       - MYSQL_ROOT_PASSWROD=secret
       - MYSQL_DATABASE=LARAVELDB
       - MYSQL_USER=laravel
       - MYSQL_PASSWORD=secret
-
       - MYSQL_ALLOW_EMPTY_PASSWORD=true
 
-    #volumes:
-      #- ./mysql/initdb.sql:/docker-entrypoint-initdb.d/initdb.sql
-      # - ./mysql:/docker-entrypoint-initdb.d
     ports:
       - "3306:3306"
     networks:
-      - laravel
+      laravel:
+        ipv4_address: 172.40.0.4
 
 networks:
   laravel:
