Add Model and Seeds for forum

--- a/laravel-project/.env.example
+++ b/laravel-project/.env.example
@@ -7,11 +7,11 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=172.40.0.4
-DB_PORT=3306
-DB_DATABASE=LARAVELDB
-DB_USERNAME=laravel
-DB_PASSWORD=secret
+DB_HOST=
+DB_PORT=
+DB_DATABASE=
+DB_USERNAME=
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
