--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,19 +5,19 @@ services:
     container_name: m-mariadb
     build: ./mariadb
     image: custom-mariadb
+    restart: always
     environment:
       - TZ=Asia/Seoul
       - MYSQL_ROOT_PASSWROD=secret
       - MYSQL_DATABASE=LARAVELDB
       - MYSQL_USER=laravel
       - MYSQL_PASSWORD=secret
-      - MYSQL_ALLOW_EMPTY_PASSWORD=true
     ports:
       - "3306:3306"
     volumes:
-      #      - ./mariadb/conf:/etc/mysql
       - ./mariadb/data:/var/lib/mysql
-    #      - ./mariadb/log:/var/log/mysql
+      #      - ./mariadb/conf:/etc/mysql
+      #      - ./mariadb/log:/var/log/mysql
     networks:
       laravel:
         ipv4_address: 172.40.0.4
@@ -26,6 +26,8 @@ services:
     container_name: m-laravel
     build: .
     image: custom-laravel
+    depends_on:
+      - my-mariadb
     volumes:
       - ./laravel-project:/root/laravel-project
     networks:
@@ -33,11 +35,18 @@ services:
         ipv4_address: 172.40.0.3
     command: ["/bin/bash", "entrypoint"]
 
-  my-nginx:
-    container_name: m-nginx
+  proxy:
+    container_name: m-proxy
     image: nginx:latest
+    depends_on:
+      - my-laravel
     ports:
       - "80:80"
+      - "82:80"
+      - "443:443"
+    links:
+      - my-laravel
+    restart: always
     volumes:
       - ./proxy/nginx.conf:/etc/nginx/nginx.conf
     networks:
