--- a/proxy/nginx.conf
+++ b/proxy/nginx.conf
@@ -3,45 +3,23 @@ worker_processes  auto;
 error_log  /var/log/nginx/error.log warn;
 pid        /var/run/nginx.pid;
 events {                     
-    worker_connections  1024;
+    worker_connections  2048;
 }
 http {
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
 
-    upstream phpserver {
-        server my-laravel:80;
-        server my-laravel:9000;
-        server my-laravel:9001;
-        server my-laravel:9002;
-    }
-
-    server {
-        listen 82;
-        root /var/www/html;
-        index index.html index.htm index.php;
-
-        server_name localhost;
-
-        error_log  /var/log/nginx/error.log;
-        access_log /var/log/nginx/access.log;
-
-        location ~ \.php$ {
-                try_files $uri =404;
-                fastcgi_split_path_info ^(.+\.php)(/.+)$;
-                fastcgi_pass phpserver;
-                fastcgi_index index.php;
-                include fastcgi_params;
-                fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-                fastcgi_param PATH_INFO $fastcgi_path_info;
-        }
+    upstream web {
+        server my-web1:8010;
+        server my-web2:8011;
+        server my-web3:8012;
     }
 
     server {
         listen 80;
         server_name localhost;
         location / {
-            proxy_pass         http://phpserver;
+            proxy_pass         http://web;
             proxy_redirect     off;
             proxy_set_header   Host $host;
             proxy_set_header   X-Real-IP $remote_addr;
