--- a/proxy/nginx.conf
+++ b/proxy/nginx.conf
@@ -10,12 +10,14 @@ http {
     default_type  application/octet-stream;
 
     upstream web {
-        server my-web1:8010;
-        server my-web2:8011;
-        server my-web3:8012;
+        server laravel_laravel_1:9000;
+        server laravel_laravel_2:9000;
+        server laravel_laravel_3:9000;
     }
 
     server {
+        root /app;
+
         listen 80;
         server_name localhost;
         location / {
