--- a/proxy/nginx.conf
+++ b/proxy/nginx.conf
@@ -2,24 +2,29 @@ user  nginx;
 worker_processes  auto;
 error_log  /var/log/nginx/error.log warn;
 pid        /var/run/nginx.pid;
-events {                     
-    worker_connections  2048;
+events {
+    worker_connections  1048;
 }
 http {
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
 
     upstream web {
-        server laravel_laravel_1:9000;
-        server laravel_laravel_2:9000;
-        server laravel_laravel_3:9000;
+        server docker-laravel7_laravel_1:9000;
+        server docker-laravel7_laravel_2:9000;
+        server docker-laravel7_laravel_3:9000;
     }
 
     server {
-        root /app;
-
         listen 80;
-        server_name localhost;
+
+        charset utf-8;
+
+        access_log  /var/log/nginx/access.log combined;
+        error_log   /var/log/nginx/error.log error;
+
+        index index.html index.php;
+        root /var/www/html/public;
         location / {
             proxy_pass         http://web;
             proxy_redirect     off;
@@ -29,12 +34,38 @@ http {
         }
     }
     
+    # server {
+    #     listen 80;
+
+    #     charset utf-8;
+
+    #     access_log  /var/log/nginx/access.log combined;
+    #     error_log   /var/log/nginx/error.log error;
+
+    #     index index.html index.php;
+    #     root /var/www/html/public;
+
+    #     location / {
+    #         try_files $uri /index.php?$args;
+    #     }
+
+    #     location ~ \.php$ {
+    #         try_files $uri =404;
+    #         fastcgi_split_path_info ^(.+\.php)(/.+)$;
+    #         fastcgi_pass laravel:9000;
+    #         fastcgi_index index.php;
+    #         include fastcgi_params;
+    #         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+    #         fastcgi_param PATH_INFO $fastcgi_path_info;
+    #     }
+
+    # }
+
     log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
                       '$status $body_bytes_sent "$http_referer" '
                       '"$http_user_agent" "$http_x_forwarded_for"';
     access_log  /var/log/nginx/access.log  main;
-                                                
-    sendfile        on;                                                                         
-    keepalive_timeout  65;                                                                      
-    include /etc/nginx/conf.d/*.conf;           
+
+    sendfile        on;
+    keepalive_timeout  65;
 }
