--- a/proxy/nginx.conf
+++ b/proxy/nginx.conf
@@ -9,10 +9,12 @@ http {
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
 
-    upstream web {
+    upstream fastcgi_backend {
         server docker-laravel7_laravel_1:9000;
         server docker-laravel7_laravel_2:9000;
         server docker-laravel7_laravel_3:9000;
+
+        keepalive 5;
     }
 
     server {
@@ -25,41 +27,25 @@ http {
 
         index index.html index.php;
         root /var/www/html/public;
+
         location / {
-            proxy_pass         http://web;
-            proxy_redirect     off;
-            proxy_set_header   Host $host;
-            proxy_set_header   X-Real-IP $remote_addr;
-            proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+            try_files $uri /index.php?$args;
         }
+
+        location ~ \.php$ {
+            try_files $uri =404;
+            fastcgi_split_path_info ^(.+\.php)(/.+)$;
+
+            fastcgi_pass fastcgi_backend;
+            fastcgi_keep_conn on;
+
+            fastcgi_index index.php;
+            include fastcgi_params;
+            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+            fastcgi_param PATH_INFO $fastcgi_path_info;
+        }
+
     }
-    
-    # server {
-    #     listen 80;
-
-    #     charset utf-8;
-
-    #     access_log  /var/log/nginx/access.log combined;
-    #     error_log   /var/log/nginx/error.log error;
-
-    #     index index.html index.php;
-    #     root /var/www/html/public;
-
-    #     location / {
-    #         try_files $uri /index.php?$args;
-    #     }
-
-    #     location ~ \.php$ {
-    #         try_files $uri =404;
-    #         fastcgi_split_path_info ^(.+\.php)(/.+)$;
-    #         fastcgi_pass laravel:9000;
-    #         fastcgi_index index.php;
-    #         include fastcgi_params;
-    #         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-    #         fastcgi_param PATH_INFO $fastcgi_path_info;
-    #     }
-
-    # }
 
     log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
                       '$status $body_bytes_sent "$http_referer" '
