--- a/laravel-project/composer.json
+++ b/laravel-project/composer.json
@@ -17,6 +17,7 @@
         "laravel/framework": "^7.0",
         "laravel/helpers": "^1.2",
         "laravel/tinker": "^2.0",
+        "predis/predis": "^1.1",
         "pusher/pusher-php-server": "^4.1"
     },
     "require-dev": {
