--- a/laravel-project/.env.example
+++ b/laravel-project/.env.example
@@ -26,10 +26,10 @@ REDIS_PORT=6379
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.mailtrap.io
 MAIL_PORT=2525
-MAIL_USERNAME=NAME12
-MAIL_PASSWORD=PASS12
-MAIL_ENCRYPTION=tls
-MAIL_FROM_ADDRESS=sjun93@naver.com
+MAIL_USERNAME=
+MAIL_PASSWORD=
+MAIL_ENCRYPTION=
+MAIL_FROM_ADDRESS=
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
