--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -15,7 +15,7 @@ jobs:
             extensions: mbstring, bcmath # Setup any required extensions for tests
 
         - name: Access Source directory
-          run: cd laravel-project
+          run: cd ./laravel-project
         - name: Composer install
           run: composer install
         - name: Run Tests
