add working-directory in laravel.yml

--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -13,11 +13,10 @@ jobs:
           with:
             php-version: 7.4.3 # Use your PHP version
             extensions: mbstring, bcmath # Setup any required extensions for tests
-
-        - name: Access Source directory
-          run: cd ./laravel-project
         - name: Composer install
           run: composer install
+          working-directory: ./laravel-project
+
         - name: Run Tests
           run: ./vendor/bin/phpunit
 
