--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -1,25 +1,51 @@
 name: CI-CD # Give your workflow a name
 
-on: push # Run the workflow for each push event (i.e commit)
+on:
+  push:
+    branches: [ master ]
 
 jobs:
   test-php:
-      name: Test/Lint PHP
-      runs-on: ubuntu-latest
-      steps:
-        - uses: actions/checkout@v2
-        - name: Setup PHP
-          uses: shivammathur/setup-php@v1
-          with:
-            php-version: 7.4.3 # Use your PHP version
-            extensions: mbstring, bcmath # Setup any required extensions for tests
-        - name: Composer install
-          run: composer install
-          working-directory: ./laravel-project
+    name: Test/Lint PHP
+    runs-on: ubuntu-latest
+    working-directory: ./laravel-project
+    steps:
+    - uses: actions/checkout@v2
+    - name: Setup PHP
+      uses: shivammathur/setup-php@v1
+      with:
+        php-version: 7.4.3 # Use your PHP version
+        extensions: mbstring, bcmath # Setup any required extensions for tests
 
-        - name: Run Tests
-          run: ./vendor/bin/phpunit
-          working-directory: ./laravel-project
+    - uses: actions/checkout@v2
+    - name: Copy .env
+        run: php -r "file_exists('.env') || copy('.env.example', '.env');"
+
+    - name: Composer install
+      run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
+
+    - name: Generate key
+      run: php artisan key:generate
+
+    - name: Directory Permissions
+      run: chmod -R 777 storage bootstrap/cache
+
+    - name: Create Database
+      run: |
+        mkdir -p database
+        touch database/database.sqlite
+
+    - name: Database Migration
+      run: php artisan migrate
+
+    - name: Seed Database
+      run: php artisan db:seed
+
+    - name: Execute tests (Unit and Feature tests) via PHPUnit
+      env:
+        DB_CONNECTION: sqlite
+        DB_DATABASE: database/database.sqlite
+      run: ./vendor/bin/phpunit
 
   deploy:
     name: Deploy to Production
