--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -23,7 +23,7 @@ jobs:
 
     - uses: actions/checkout@v2
     - name: Copy .env
-      run: php -r "file_exists('.env') || copy('.env.example', '.env');"
+      run: php -r "file_exists('.env') || copy('.env.ci', '.env');"
 
     - name: Composer install
       run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
@@ -34,13 +34,11 @@ jobs:
     - name: Directory Permissions
       run: chmod -R 777 storage bootstrap/cache
 
-    - name: Create Database
+    - name: Create Database and Schemas
       run: |
         mkdir -p database
         touch database/database.sqlite
-
-    - name: Database Migration
-      run: php artisan migrate
+        php artisan migrate
 
     - name: Seed Database
       run: php artisan db:seed
