--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -26,27 +26,8 @@ jobs:
       run: php -r "file_exists('.env') || copy('.env.ci', '.env');"
 
     - name: Composer install
-      run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
-
-    - name: Generate key
-      run: php artisan key:generate
-
-    - name: Directory Permissions
-      run: chmod -R 777 storage bootstrap/cache
-
-    - name: Create Database and Schemas
-      run: |
-        mkdir -p database
-        touch database/database.sqlite
-        php artisan migrate
-
-    - name: Seed Database
-      run: php artisan db:seed
-
-    - name: Execute tests (Unit and Feature tests) via PHPUnit
-      env:
-        DB_CONNECTION: sqlite
-        DB_DATABASE: database/database.sqlite
+      run: composer install
+    - name: Run Tests
       run: ./vendor/bin/phpunit
 
   deploy:
