--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -1,4 +1,4 @@
-name: CI-CD # Give your workflow a name
+name: CI-CD
 
 on:
   push:
@@ -8,6 +8,18 @@ jobs:
   test-php:
     name: Test/Lint PHP
     runs-on: ubuntu-latest
+
+    services:
+      postgres:
+        image: postgres:9.6.16
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: db_test
+        ports:
+          - 5432:5432
+        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
+
     defaults:
       run:
         shell: bash
@@ -26,8 +38,24 @@ jobs:
       run: php -r "file_exists('.env') || copy('.env.ci', '.env');"
 
     - name: Composer install
-      run: composer install
-    - name: Run Tests
+      run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
+
+    - name: Generate key
+      run: php artisan key:generate
+
+    - name: Directory Permissions
+      run: chmod -R 777 storage bootstrap/cache
+
+    - name: Create Database and Schemas
+      run: php artisan migrate
+
+    - name: Seed Database
+      run: php artisan db:seed
+
+    - name: Execute tests (Unit and Feature tests) via PHPUnit
+      env:
+        DB_CONNECTION: pgsql
+        DB_DATABASE: db_test
       run: ./vendor/bin/phpunit
 
   deploy:
@@ -38,3 +66,4 @@ jobs:
     steps:
     - uses: actions/checkout@v2
       # Deploy Code 
+ 
