--- a/laravel-project/.env.ci
+++ b/laravel-project/.env.ci
@@ -6,15 +6,12 @@ APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 
-DB_CONNECTION=sqlite
-DB_DATABASE=database/database.sqlite
-
-# DB_CONNECTION=mysql
-# DB_HOST=
-# DB_PORT=
-# DB_DATABASE=
-# DB_USERNAME=
-# DB_PASSWORD=
+DB_CONNECTION=pgsql
+DB_HOST=localhost
+DB_PORT=5432
+DB_DATABASE=db_test
+DB_USERNAME=postgres
+DB_PASSWORD=postgres
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
